--- a/.github/workflows/test_manifest.yaml
+++ b/.github/workflows/test_manifest.yaml
@@ -32,12 +32,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Slack Notification
-      uses: rtCamp/action-slack-notify@v2
-      env:
-        SLACK_CHANNEL: '#builds'
-        SLACK_COLOR: ${{ job.status }}
-        SLACK_ICON: https://github.com/rtCamp.png?size=48
-        SLACK_MESSAGE: 'Post Content :rocket:'
-        SLACK_TITLE: 'Well done!'
-        SLACK_USERNAME: GitHub Action
-        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+      uses: craftech-io/slack-action@v1
+      with:
+        slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
+        slack_channel: builds
+        slack_username: Github
+        status: failure
+        if: failure()
