--- a/.github/workflows/test_manifest.yaml
+++ b/.github/workflows/test_manifest.yaml
@@ -14,6 +14,7 @@ jobs:
       - run: |
               FILES="$(ls -d ./manifests/* | jq -R -s -c 'split("\n")[:-1]')"
               echo "files=`echo -n $FILES`" >> $GITHUB_ENV
+              
   test-files:
     needs: find-files
     runs-on: ubuntu-latest
@@ -27,6 +28,7 @@ jobs:
       uses: instrumenta/kubeval-action@master
       with: 
        files: ${{matrix.manifest-files}}
+ 
   notification:
     needs: test-files
     runs-on: ubuntu-latest
@@ -36,5 +38,5 @@ jobs:
       with:
         slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
         slack_channel: builds
-        slack_username: Github
+        slack_username: Github actions
       if: always()
