--- a/openhab/Chart.yaml
+++ b/openhab/Chart.yaml
@@ -3,4 +3,4 @@ name: openhab
 description: Openhab smarthome helm chart
 type: application
 version: 0.0.3
-appVersion: "3.4.0"
+appVersion: "3.4.0.M3"
